--- a/_variables.scss
+++ b/_variables.scss
@@ -1,7 +1,9 @@
 //Primary Styles
-//Body
-$PrimaryBackgroundColour: black;
+//Calc
+$PrimaryBackgroundColour: #22252d;
 $PrimaryTextColour:white;
+//Calc Bottom
+$PrimaryBackgroundColour2:#292d36;
 //Buttons
 $PrimaryButtonBackgroundColour:black;
 $PrimaryButtonHoverColour:gray;
