--- a/_calc.scss
+++ b/_calc.scss
@@ -3,18 +3,34 @@
     display: flex;
     flex-direction: column;
     border: $testborder1;
+    width: 22rem;
+    justify-content: center;
+    background-color: $PrimaryBackgroundColour;
 }
 
 #Calc__Top{
-    height: 15rem;
-    width: auto;
+    height: 12.5rem;
     border: $testborder2;
+    margin: 1rem 1rem 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
 
 }
 
 #Calc__Bot{
-    height: 25rem;
-    width: auto;
     border: $testborder3;
+    margin: 1rem 1rem 1rem 1rem;
+    border-radius: 1rem 1rem 0 0;
+    background-color: $PrimaryBackgroundColour2;
 
+}
+
+#Calc__Bot__All{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+    border: $testborder1;
 }
