--- a/_variables.scss
+++ b/_variables.scss
@@ -1,6 +1,6 @@
 //Primary Styles
 //Calc
-$PrimaryBackgroundColour: #22252d;
+$PrimaryBackgroundColour: #191c22;
 $PrimaryTextColour:white;
 //Calc Bottom
 $PrimaryBackgroundColour2:#292d36;
