--- a/styles.scss
+++ b/styles.scss
@@ -11,4 +11,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    // background-color: black;
+}
+main{
+    background-color: black;
+
+    height: auto;
+    width: auto;
+    
 }
