Various sizing adjustments to all0w for responsiveness

--- a/_buttons.scss
+++ b/_buttons.scss
@@ -2,7 +2,7 @@
 
 .Calc__All__Buttons{
     
-    background-color: #08080a29;
+    background-color: #08080a15;
     color: white;
     border: 0;
     font-size: 2rem;
@@ -16,11 +16,11 @@
     color: aquamarine;
 }
 
-#Calc__LightDarkModeButtons{
-    background-color: black;
-    .Calc__LightDarkModeButtons__Modes{
-        background-color: transparent;
-        border: 0;
-    }
-}
+// #Calc__LightDarkModeButtons{
+//     background-color: black;
+//     .Calc__LightDarkModeButtons__Modes{
+//         background-color: transparent;
+//         border: 0;
+//     }
+// }
 
