--- a/_calc.scss
+++ b/_calc.scss
@@ -6,7 +6,7 @@
     width: 22rem;
     justify-content: center;
     background-color: $PrimaryBackgroundColour;
-    border-radius: 1rem 1rem 1rem 1rem;
+    border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
     margin: auto;
 }
 
@@ -28,7 +28,14 @@
 
     #Calc__Top__Input{
         background-color: transparent;
+        // border: $testborder1;
         border: 0;
+        width: 100%;
+        height: auto;
+        font-size: 3rem;
+        text-align: right;
+        color: white;
+        
 
     }
 }
@@ -36,9 +43,10 @@
 #Calc__Bot{
     // border: $testborder3;
     // margin: 1rem 1rem 1rem 1rem;
-    border-radius: 1rem 1rem 0 0;
+    border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
     width: 100%;
     background-color: $PrimaryBackgroundColour2;
+    padding: 1rem 0 1rem 0;
 
 }
 
