--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+h1 {
+  color: whitesmoke;
+}
+
 .Calc__All__Buttons {
-  background-color: rgba(8, 8, 10, 0.1607843137);
+  background-color: rgba(8, 8, 10, 0.0823529412);
   color: white;
   border: 0;
   font-size: 2rem;
@@ -13,21 +17,13 @@
   color: aquamarine;
 }
 
-#Calc__LightDarkModeButtons {
-  background-color: black;
-}
-#Calc__LightDarkModeButtons .Calc__LightDarkModeButtons__Modes {
-  background-color: transparent;
-  border: 0;
-}
-
 #Calc {
   display: flex;
   flex-direction: column;
   width: 22rem;
   justify-content: center;
   background-color: #191c22;
-  border-radius: 1rem 1rem 1rem 1rem;
+  border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
   margin: auto;
 }
 
@@ -48,12 +44,18 @@
 #Calc__Top #Calc__Top__Input {
   background-color: transparent;
   border: 0;
+  width: 100%;
+  height: auto;
+  font-size: 3rem;
+  text-align: right;
+  color: white;
 }
 
 #Calc__Bot {
-  border-radius: 1rem 1rem 0 0;
+  border-radius: 1.5rem 1.5rem 1.5rem 1.5rem;
   width: 100%;
   background-color: #292d36;
+  padding: 1rem 0 1rem 0;
 }
 
 #Calc__Bot__All {
@@ -71,6 +73,6 @@
 
 main {
   background-color: black;
-  height: auto;
+  height: 100vh;
   width: auto;
 }/*# sourceMappingURL=styles.css.map */
