Deleted un-used files

--- a/_buttons.scss
+++ b/_buttons.scss
@@ -11,6 +11,13 @@
     border-radius: 1rem 1rem 1rem 1rem;
     margin: 0.25rem;
 }
+.Calc__All__Buttons:hover{
+    cursor: pointer;
+    background-color: #c0c0d4;
+    color: black;
+
+
+}
 
 .Calc__All__Icons{
     color: aquamarine;
